<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PrimerCalc</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Primer Sequence</string>
    <string name="button_send">Calc</string>
    <string name="title_activity_display_message">Annealing Temp</string>
    <string name="title_activity_do_the_math">DoTheMath</string>
 	<string name="button_a">A</string>
 	<string name="button_t">T</string>
 	<string name="button_c">C</string>
 	<string name="button_g">G</string>
 	<string name="button_backspace">BkSp</string>


</resources>